@@ -27,7 +27,7 @@
 
       %p.commit-title
         - if commit = pipeline.commit
-          = commit_author_avatar(commit, size: 20)
+          = author_avatar(commit, size: 20)
           = link_to_gfm truncate(commit.title, length: 60), namespace_project_commit_path(@project.namespace, @project, commit.id), class: "commit-row-message"
         - else
           Cant find HEAD commit for this branch
